# iot-device-sw

./: CMakeLists.txt  README.md  common.h  device.c  server.c  server.h  timer.c  timer.h
aes/: CMakeLists.txt  aes.c  aes.h  test.c
spi_device/: CMakeLists.txt  spi.c  spi.h
